# lightsaber

./: README.md
client/: .env.example  .gitignore  .prettierignore  .prettierrc  README.md  buf.gen.yaml  generate-proto.sh  index.html  package.json  vite.config.ts
client/docs/: CLIENT_UTILS_GUIDE.md  INTEGRATION_GUIDE.md
client/src/: main.tsx
client/src/components/: TodoExample.tsx  UtilsDemo.tsx  Web3AuthDemo.tsx
client/src/components/ui/: ErrorBoundary.tsx  LazyImage.tsx  Spinner.tsx  SuspenseFallback.tsx  ThemeToggle.tsx  button.tsx  index.ts
client/src/hooks/: index.ts  useCopyToClipboard.ts  useIntersectionObserver.ts  useLocalStorage.ts  useOnlineStatus.ts
client/src/lib/: db.ts  env.ts  formatters.ts  grpc.ts  query.ts  suspense.tsx  web3auth.ts
client/src/providers/: AppProviders.tsx  QueryProvider.tsx  README.md  ThemeProvider.tsx  Web3AuthProvider.tsx  index.ts
client/src/routes/: __root.tsx  index.tsx
client/src/styles/: styles.css
server/: .gitignore  Cargo.toml
server/src/: server.rs
