[package]
name = "saber-server"
version = "0.0.1"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "saber-server"
path = "src/server.rs"

[dependencies]
tonic = "0.10"
tonic-web = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4", features = ["cors"] }
http = "0.2"
tower = "0.4"

[build-dependencies]
tonic-build = "0.10"